--- a/index.html
+++ b/index.html
@@ -20,14 +20,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Our own scripts -->
+    <script type="text/javascript" src="js/classes/Explosion.js" defer></script>
+    <script type="text/javascript" src="js/classes/Base.js" defer></script>
+    <script type="text/javascript" src="js/classes/Enemy.js" defer></script>
     <script type="text/javascript" src="js/classes/Target.js" defer></script>
     <script type="text/javascript" src="js/classes/Launcher.js" defer></script>
     <script type="text/javascript" src="js/classes/Drone.js" defer></script>
+      <script type="text/javascript" src="js/classes/EnemyDrone.js" defer></script>
 
     <script type="text/javascript" src="js/graphics/drawGrid.js" defer></script>
     
     <script type="text/javascript" src="js/draw.js" defer></script>
     <script type="text/javascript" src="js/input.js" defer></script>
+    <script type="text/javascript" src="js/collisions.js" defer></script>
     <script type="text/javascript" src="js/camera.js" defer></script>
     <script type="text/javascript" src="js/sketch.js" defer></script>
     
